# LEGACY-ThorQ

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  README.md  apiaccount.cpp  apiaccount.h  apiclient.cpp  apiclient.h  apiuser.cpp  apiuser.h  commitLog.txt  constants.h  image.cpp  image.h  main.cpp  passwordhash.cpp  passwordhash.h  procmon.cpp  procmon.h  resources.qrc  resources.rc  stylesheets.cpp  stylesheets.h  user.cpp  user.h  userdata.h  userdelegate.cpp  userdelegate.h  usermodel.cpp  usermodel.h  validators.cpp  validators.h
.github/workflows/: Ubuntu.yml  Windows.yml
arduino/collar/: collar.ino
collar/: serial.cpp  serial.h
stylesheets/: main.css  namedlineedit.css
ui/: controlwidget.cpp  controlwidget.h  errorlabel.cpp  errorlabel.h  loginwidget.cpp  loginwidget.h  mainwidget.cpp  mainwidget.h  namedlineedit.cpp  namedlineedit.h  recoverwidget.cpp  recoverwidget.h  registerwidget.cpp  registerwidget.h  settingswidget.cpp  settingswidget.h  userlistitem.cpp  userlistitem.h  userlistmodel.cpp  userlistmodel.h  userlistwidget.cpp  userlistwidget.h
vr/: openvroverlaycontroller.cpp  openvroverlaycontroller.h  ovraction.cpp  ovraction.h  ovractionset.cpp  ovractionset.h  ovrhelpers.h  ovrinputvalue.cpp  ovrinputvalue.h  ovroverlay.cpp  ovroverlay.h  ovrsettings.cpp  ovrsettings.h  ovrtrackeddevice.cpp  ovrtrackeddevice.h
vr/data/: actions.json  thorq.vrmanifest
vr/data/bindings/: controller_holographic.json  controller_hp_motion.json  controller_knuckles.json  controller_knuckles_ev1.json  controller_oculus_touch.json  controller_vive.json  controller_vive_cosmos.json  hmd_holographic.json  hmd_index.json  hmd_rift.json  hmd_vive.json  hmd_vive_cosmos.json  hmd_vive_pro.json
